--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
+ 
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.js" }
-    ]
+  "version": 2,
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ],
+  "functions": {
+    "getAllNotification": { "maxDuration": 300 },
+    "getAllComplaint": { "maxDuration": 300 },
+    "getAllProductWarrantyWithPage": { "maxDuration": 300 }
   }
-  
+}
