--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
- 
+
 {
   "version": 2,
-  "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
-  ],
+  "functions": {
+    "index": { "maxDuration": 120 } 
+  },
   "routes": [
     { "src": "/(.*)", "dest": "/index.js" }
-  ],
-  "functions": {
-    "getAllNotification": { "maxDuration": 300 },
-    "getAllComplaint": { "maxDuration": 300 },
-    "getAllProductWarrantyWithPage": { "maxDuration": 300 }
-  }
+  ]
 }
+
