--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
-  
-  
   "dependencies": {
     "aws-sdk": "^2.1353.0",
     "axios": "^1.4.0",
@@ -24,11 +22,13 @@
     "mongoose": "^7.8.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.8.6",
+    "twilio": "^5.5.0",
     "xlsx": "^0.18.5"
   }
 }
