--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "node-cron": "^3.0.3",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
+    "onesignal-node": "^3.4.0",
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.8.6",
