--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^148.0.0",
     "moment": "^2.30.1",
     "mongoose": "^7.8.0",
     "multer": "^1.4.5-lts.1",
