--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.1",
     "aws-sdk": "^2.1353.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
