--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.8.6",
+    "socket.io": "^4.8.1",
     "twilio": "^5.5.0",
     "xlsx": "^0.18.5"
   }
