--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csv-parser": "^3.0.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
